@@ -23,7 +23,8 @@ AC_PROG_CXX
 LT_PREREQ([2.2.6])
 LT_INIT([dlopen win32-dll disable-static])
 
-PKG_CHECK_MODULES([LIBXMLXX], [libxml-2.0 >= 2.6.1 glibmm-2.4 >= 2.4.0])
+AC_SUBST([LIBXMLXX_MODULES], ['libxml-2.0 >= 2.6.1 glibmm-2.4 >= 2.4.0'])
+PKG_CHECK_MODULES([LIBXMLXX], [$LIBXMLXX_MODULES])
 
 AC_LANG([C++])
 AC_CHECK_HEADERS([string list map], [], [AC_MSG_ERROR([required headers not found])])
